display : fixing on mobile

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -176,7 +176,7 @@ body {
   }
 
   .data-field-2212 {
-    font-size: 7px;
+    font-size: 6px;
   }
 
   .data-field-1501-santa {
